[package]
name = "sss_moo"
version = "0.7.1"
edition = "2021"
repository = "https://github.com/Tiikara/sss_moo"
keywords = ["moo", "optimization"]
description = "SSS Many-Objective Optimization Framework"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.test]
opt-level = 3

[dependencies]
rand = "0.8.5"
crossbeam = "0.8.1"
serde_json = "1.0.91"
num_cpus  = "1.15.0"
peeking_take_while = "1.0.0"
ndarray = "0.15.6"
plotters = "0.3.4"
itertools = "0.10.5"
markdown-table = "0.1.0"
tokio = { version = "1.24.1", features = ["full"] }
dyn-clone = "1.0.10"
rand_distr = "0.4.3"
tempfile = "3.2"
